--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -118,47 +118,133 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 * 3.5
 ---
 10. 안전한 인터페이스를 구현하기 위해서는 보안 기술 적용이 무엇보다도 중요하다. 다음은 인터페이스 보안 구현 방안이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
-
 - 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
-
 ​
-
 - 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
-
 답)
-
 ​①____________________________
-
 ​
-
 ​②____________________________
-
 ​
-
 ​
-
 ​정답)
-
 ① Plug-in (방식)
-
 ② SSL/TLS (= SSL = TLS)
-
 ​---
-
 - (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
-
 - OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
-
 ​
-
 답)__________________________
-
 ​
-
 ​
-
 ​
-
 ​정답) 소켓(socket)
-
+​---
+30. 다음은 클래스 다이어그램(Class Diagram)에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+- 클래스 다이어그램의 구성 요소 중 (          ①         ) 은/는 클래스의 구조적 특성에 이름을 붙인 것으로 특성에 해당하는 인스턴스가 보유할 수 있는 값의 범위를 기술한 것이다.
+​
+​​- 클래스 다이어그램의 접근 제어자 중 (​      ②      )은/는 동일 패키지/파생 클래스에서 접근 가능(protected)함을 표현할 때 사용한다.
+정답) 
+​​① 속성(Attribute)
+​​② #
+​---
+1. 다음에서 설명하는 시스템은 무엇인가?
+- 비정상적인 접근의 탐지를 위해 의도적으로 설치해 둔 시스템
+- 침입자를 속여 실제 공격당하는 것처럼 보여줌으로써 크래커를 추적하고, 공격기법의 정보를 수집하는 역할을 하는 시스템
+​
+답)_____________________________________
+​
+​
+​
+​정답) ​허니팟(Honeypot) : 허니팟 또는 허니 포트는 비정상적인 접근을 탐지하기 위해 의도적으로 설치해 둔 시스템을 의미한다.
+​​
+​
+해설) 2022년 1회 필기 교차 출제 대비
+​---
+2. 다음은 테스트에 대한 설명이다. 괄호(     ) 안에 들어갈 테스트의 유형을 보기에서 골라 쓰시오.
+• (      ①      ) : 오류를 제거하거나 수정한 시스템에서 오류 제거와 수정에 의해 새로이 유입된 오류가 없는지 확인하는 일종의 반복 테스트 기법
+• (      ②      ) : 짧은 시간에 사용자가 몰릴 때 시스템의 반응을 측정하는 테스트 기법
+| 보기 |
+Recovery Testing, Security Testing, Generalization, Structure Testing, Regression Testing, Stress Testing, Spike Testing
+정답)
+① Regression Testing
+② Spike Testing
+---
+3. 아래는 상호배제를 해결하기 위한 기법이다. 괄호(        ) 안에 들어갈 용어를 쓰시오.
+• (                )은/는 멀티프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 기법이다.
+• 한 프로세스(또는 스레드)에서 (             )의 값을 변경하는 동안 다른 프로세스가 동시에 이 값을 변경해서는 안 된다.
+• (                )은/는 P, V 연산을 기반으로 구현한다.
+​
+정답) 세마포어 (Semaphore)
+​
+​해설) 
+* 2022년 1회 기사 필기 기출, 2022년 1회 산업기사 필기 기출
+* 세마포어 문제가 기사, 산업기사 필기에 출제 되었기 때문에 나올 가능성이 많습니다. 잘 알아두시면 좋겠습니다.
+* 한글, 영어 모두 알아두시구요. 세마포어가 상호배제를 해결하기 위한 기법이라는 것과 세마포어의 개념을 알아두세요.
+---
+4. 아래는 저작권 관리 구성요소에 대한 설명이다. 각각이 설명하는 저작권 관리 구성 요소를 쓰시오.
+① 저작권에 대한 사용 권한, 라이센스 발급, 사용량 관리 및 키 관리, 라이센서 발급 관리 등을 수행하는 도구
+② 콘텐츠를 메타데이터와 함께 배포 가능한 단위로 묶는 도구
+답)
+①_________________________
+②_________________________
+​
+​
+​
+정답)
+① 클리어링 하우스(Clearing House)
+② 패키저(Packager)
+​---
+5. 상향식 비용 산정 기법 중 소프트웨어 각 기능의 원시 코드 라인 수의 낙관치, 중간치, 비관치를 측정하여 예측치를 구하고 이를 이용하여 비용을 산정하는 기법을 무엇이라고 하는지 쓰시오.
+​
+​
+​
+정답) LOC(Lines of Code) 기법
+---
+7. 다음은 UML의 관계(Relationships)에 대한 설명이다. 괄호(       ) 안에 공통적으로 들어갈 용어를 쓰시오.
+• (              ) 관계는 하나의 객체에 여러 개의 독립적인 객체들이 구성되는 관계이다.
+• (              ) 관계는 하나의 사물이 다른 사물에 포함되어 있는 관계를 표현한다.
+• (              ) 관계는 포함되는 쪽(Part; 부분)에서 포함하는 쪽(Whole; 전체)으로 속이 빈 마름모를 연결하여 표현한다.
+​
+​정답) 집합(Aggregation)
+---
+6. 최근 클라우드 기반의 대용량 데이터를 다루는 기술이 다양하게 활용되고 있다. 아래는 클라우드와 빅데이터 관련 기술에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+• (       ①      )은/는 컨테이너 응용 프로그램의 배포를 자동화하는 오픈소스 엔진으로 소프트웨어 컨테이너 안에 응용 프로그램들을 배치시키는 일을 자동화해 주는 오픈 소스 프로젝트이자 소프트웨어이다.
+​
+• (       ②      )은/는 웹 사이트를 크롤링하여 구조화된 데이터를 수집하는 파이썬(Python) 기반의 애플리케이션 프레임워크이다. 
+정답)
+① 도커(Docker)
+② 스크레파이Scrapy
+---
+8. 다음은 반 정규화 기법에 대한 설명이다. 괄호(        ) 안에 들어갈 용어를 쓰시오.
+• 테이블 분할 기법 중 집계 테이블 추가는 집계 데이터를 위한 테이블을 생성하고, 각 원본 테이블에 트리거를 설정하여 사용하는 것으로, 트리거의 오버헤드에 유의할 필요가 있다.
+​
+• 테이블 분할 기법 중 (                ) 추가는 이력 관리 등의 목적으로 추가하는 테이블로, 적절한 데이터양의 유지와 활용도를 높이기 위해 기본키를 적절히 설정한다.
+​
+정답) 진행 테이블
+---
+9. 다음은 IPC(Inter-Process Communication) 주요 기법에 대한 설명이다. 괄호(       ) 안에 공통적으로 들어갈 용어를 쓰시오.
+- (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
+- OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
+​
+답)__________________________
+​
+​
+​
+​정답) 소켓(socket)
+​
+---
+10. 안전한 인터페이스를 구현하기 위해서는 보안 기술 적용이 무엇보다도 중요하다. 다음은 인터페이스 보안 구현 방안이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
+- 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
+​
+- 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
+답)
+​①____________________________
+​
+​②____________________________
+​
+​
+​정답)
+① Plug-in (방식)
+② SSL/TLS (= SSL = TLS)
 ​---
