--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -248,3 +248,31 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 ① Plug-in (방식)
 ② SSL/TLS (= SSL = TLS)
 ​---
+32. 다음에서 설명하는 IT 기술을 쓰시오.
+
+- 기존의 라우터, 스위치 등과 같이 하드웨어에 의존하는 네트워크 체계에서 안정성, 속도, 보안 등을 소포트웨어로 제어, 관리하기 위해 개발된 기술
+
+- 네트워크를 제어부, 데이터 전달부로 분리하여 네트워크 관리자가 보다 효율적으로 네트워크를 제어, 관리 할 수 있는 기술
+
+- 네트워크 장비의 펌웨어 업그레이드를 통해 사용자의 직접적인 데이터 전송 경로 관리가 가능하고, 기존 네트워크에는 영향을 주지 않으면서 특정 서비스의 전송 경로 수정을 통하여 인터넷상에서 발생하는 문제를 처리할 수 있음
+
+​
+
+​정답) SDN(Software Defined Networking)
+---
+31. 다음은 논리적 데이터 모델링 유형에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+
+- (         ①        )모델은 논리적 구조가 2차원 테이블 형태로 구성된 모델로 1:1, 1:N, N:M을 자유롭게 표현할 수 있다.
+
+​
+
+​​- (​         ②        )모델은 논리적 구조가 트리 형태로 구성된 모델로 상하관계 존재하고, 1:N 관계만 허용한다.
+
+정답) 
+
+​​① 관계 데이터
+
+​
+
+​​② 계층 데이터
+---
