--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -172,8 +172,10 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 정답) GRANT INSERT ON 직원 TO 고길동;
 ​
 ---
+
 ```printf("%.2f", (float)21/(3*2));```
-* 3.5
+
+* 3.50
 
 ---
 
@@ -193,12 +195,12 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 ② SSL/TLS (= SSL = TLS)
 ​---
 - (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
+
+
 - OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
 ​
-답)__________________________
-​
-​
 
+답)__________________________
 ​
 
 ​정답) 소켓(socket)
@@ -270,37 +272,56 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 정답)
 ① 클리어링 하우스(Clearing House)
 ② 패키저(Packager)
+
 ​---
+
 5. 상향식 비용 산정 기법 중 소프트웨어 각 기능의 원시 코드 라인 수의 낙관치, 중간치, 비관치를 측정하여 예측치를 구하고 이를 이용하여 비용을 산정하는 기법을 무엇이라고 하는지 쓰시오.
 ​
 ​
 ​
 정답) LOC(Lines of Code) 기법
+
 ---
+
 7. 다음은 UML의 관계(Relationships)에 대한 설명이다. 괄호(       ) 안에 공통적으로 들어갈 용어를 쓰시오.
+
 • (              ) 관계는 하나의 객체에 여러 개의 독립적인 객체들이 구성되는 관계이다.
+
 • (              ) 관계는 하나의 사물이 다른 사물에 포함되어 있는 관계를 표현한다.
+
 • (              ) 관계는 포함되는 쪽(Part; 부분)에서 포함하는 쪽(Whole; 전체)으로 속이 빈 마름모를 연결하여 표현한다.
 ​
 ​정답) 집합(Aggregation)
+
 ---
+
 6. 최근 클라우드 기반의 대용량 데이터를 다루는 기술이 다양하게 활용되고 있다. 아래는 클라우드와 빅데이터 관련 기술에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+
 • (       ①      )은/는 컨테이너 응용 프로그램의 배포를 자동화하는 오픈소스 엔진으로 소프트웨어 컨테이너 안에 응용 프로그램들을 배치시키는 일을 자동화해 주는 오픈 소스 프로젝트이자 소프트웨어이다.
 ​
 • (       ②      )은/는 웹 사이트를 크롤링하여 구조화된 데이터를 수집하는 파이썬(Python) 기반의 애플리케이션 프레임워크이다. 
 정답)
+
 ① 도커(Docker)
+
 ② 스크레파이Scrapy
+
 ---
+
 8. 다음은 반 정규화 기법에 대한 설명이다. 괄호(        ) 안에 들어갈 용어를 쓰시오.
+
 • 테이블 분할 기법 중 집계 테이블 추가는 집계 데이터를 위한 테이블을 생성하고, 각 원본 테이블에 트리거를 설정하여 사용하는 것으로, 트리거의 오버헤드에 유의할 필요가 있다.
 ​
 • 테이블 분할 기법 중 (                ) 추가는 이력 관리 등의 목적으로 추가하는 테이블로, 적절한 데이터양의 유지와 활용도를 높이기 위해 기본키를 적절히 설정한다.
 ​
 정답) 진행 테이블
+
 ---
+
 9. 다음은 IPC(Inter-Process Communication) 주요 기법에 대한 설명이다. 괄호(       ) 안에 공통적으로 들어갈 용어를 쓰시오.
+
 - (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
+
 - OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
 ​
 답)__________________________
@@ -310,11 +331,15 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 ​정답) 소켓(socket)
 ​
 ---
+
 10. 안전한 인터페이스를 구현하기 위해서는 보안 기술 적용이 무엇보다도 중요하다. 다음은 인터페이스 보안 구현 방안이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
+
 - 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
 ​
 - 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
+
 답)
+
 ​①____________________________
 ​
 ​②____________________________
@@ -352,3 +377,19 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 
 ​​② 계층 데이터
 ---
+33. 다음은 정보보안과 관련된 내용이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+
+- 정보보안 3요소 중에서 (       ①     )은/는 인가된 사용자에 대해서만 자원 접근이 가능해야 하는 특성이다.
+
+- 기업에서는 (        ①       )을/를 구현하기 위해서 다양한 보안 장비 및 유틸리티를 사용한다.
+
+- 대표적인 유틸리티인 (        ②      )은/는 어떤 외부 컴퓨터가 접속되면 접속 인가 여부를 점검해서 인가된 경우에는 접속이 허용되고, 그 반대의 경우에는 거부할 수 있는 접근제어 유틸리티이다.
+
+​​정답) 
+
+① 기밀성(Confidentiality)
+
+​​​​② TCP 레퍼(TCP Wrapper)
+
+​---
+
