--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -1,3 +1,19 @@
+34. 다음에서 설명하는 라우팅 프로토콜을 쓰시오.
+
+- AS 내에서 사용하는 거리 벡터(Distance-Vector) 알고리즘에 기초하여 개발된 내부 라우팅 프로토콜
+
+- 경로 선택 매트릭은 홉 카운트(Hop Count)이고, 최단 경로 탐색에 Bellman-Ford 알고리즘을 사용
+
+- 각 라우터는 이웃 라우터들로부터 수신한 정보를 이용하여 라우팅 표를 갱신
+
+​
+
+​
+
+​정답) RIP(Routing Information Protocol)
+
+---
+
 - (         ①        ) Pattern: 전역 변수를 사용하지 않고 객체를 하나만 생성하도록 하며, 생성된 객체를 어디에서든지 참조할 수 있도록 하는 디자인 패턴
 - (         ②       ) Pattern: 기존에 구현되어 있는 클래스에 필요한 기능을 추가해 나가는 설계 패턴으로 기능 확장이 필요할 때 객체 간의 결합을 통해 기능을 동적으로 유연하게 확장할 수 있게 해주어 상속의 대안으로 사용하는 디자인 패턴
 * 정답) 
@@ -154,7 +170,9 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 ①. 스위치 재밍(Switch Jamming)
 
 ②. ARP 스푸핑(ARP Spoofing)
+
 ---
+
 - ( ① )은/는 파라미터가 아닌 모듈 밖에 선언되어 있는 전역 변수를 참조하고 전역 변수를 갱신하는 식으로 상호 작용하는 경우의 결합도이다.
 ​
 - ( ② )은/는 모듈 내에서 한 활동으로부터 나온 출력값을 다른 활동이 사용할 경우의 응집도이다.
@@ -166,10 +184,11 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 
 ---
 
-• 관리자가 인사담당자 고길동에게 ‘직원’ 테이블에 대해 INSERT할 수 있는 권한을 부여
-• 대소문자를 구분하지 않음
-​
-정답) GRANT INSERT ON 직원 TO 고길동;
+* 관리자가 인사담당자 고길동에게 ‘직원’ 테이블에 대해 INSERT할 수 있는 권한을 부여
+
+* 대소문자를 구분하지 않음
+
+* ```정답) GRANT INSERT ON 직원 TO 고길동;```
 ​
 ---
 
@@ -184,20 +203,28 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 - 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
 ​
 - 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
+
 답)
-​①____________________________
+
+ ​①____________________________
+
 ​
-​②____________________________
+ ​②____________________________
+
 ​
 ​
 ​정답)
+
 ① Plug-in (방식)
+
 ② SSL/TLS (= SSL = TLS)
-​---
-- (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
+
+---
+
+* *(             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
 
 
-- OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
+* *OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
 ​
 
 답)__________________________
@@ -231,6 +258,7 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 
 ​
 답)_____________________________________
+
 ​
 ​
 ​
@@ -238,15 +266,23 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 ​​
 ​
 해설) 2022년 1회 필기 교차 출제 대비
+
 ​---
+
 2. 다음은 테스트에 대한 설명이다. 괄호(     ) 안에 들어갈 테스트의 유형을 보기에서 골라 쓰시오.
+
 • (      ①      ) : 오류를 제거하거나 수정한 시스템에서 오류 제거와 수정에 의해 새로이 유입된 오류가 없는지 확인하는 일종의 반복 테스트 기법
 • (      ②      ) : 짧은 시간에 사용자가 몰릴 때 시스템의 반응을 측정하는 테스트 기법
+
 | 보기 |
+
 Recovery Testing, Security Testing, Generalization, Structure Testing, Regression Testing, Stress Testing, Spike Testing
 정답)
+
 ① Regression Testing
+
 ② Spike Testing
+
 ---
 3. 아래는 상호배제를 해결하기 위한 기법이다. 괄호(        ) 안에 들어갈 용어를 쓰시오.
 • (                )은/는 멀티프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 기법이다.
@@ -255,23 +291,38 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 ​
 정답) 세마포어 (Semaphore)
 ​
+
 ​해설) 
+
 * 2022년 1회 기사 필기 기출, 2022년 1회 산업기사 필기 기출
+
 * 세마포어 문제가 기사, 산업기사 필기에 출제 되었기 때문에 나올 가능성이 많습니다. 잘 알아두시면 좋겠습니다.
+
 * 한글, 영어 모두 알아두시구요. 세마포어가 상호배제를 해결하기 위한 기법이라는 것과 세마포어의 개념을 알아두세요.
+
 ---
+
 4. 아래는 저작권 관리 구성요소에 대한 설명이다. 각각이 설명하는 저작권 관리 구성 요소를 쓰시오.
+
 ① 저작권에 대한 사용 권한, 라이센스 발급, 사용량 관리 및 키 관리, 라이센서 발급 관리 등을 수행하는 도구
+
 ② 콘텐츠를 메타데이터와 함께 배포 가능한 단위로 묶는 도구
+
 답)
+
 ①_________________________
+
 ②_________________________
+
 ​
-​
-​
+
 정답)
+
 ① 클리어링 하우스(Clearing House)
+
 ② 패키저(Packager)
+
+
 
 ​---
 
