--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -1,3 +1,27 @@
+# 35. 다음은 접근 통제 관련 내용이다. 괄호(       ) 안에 들어갈 용어를 보기에서 골라서 쓰시오.
+
+- (        ①        ) : 객체나 객체 내의 데이터에 대한 접근을 요청하는 능동적인 개체(행위자)
+
+- (        ②        ) : 자신의 신원을 시스템에 증명하는 과정이며 아이디와 패스워드를 입력하는 과정이 가장 일반적인 예시라고 볼 수 있다.
+
+- (        ③        ) : 중앙 관리자가 사용자와 시스템의 상호관계를 통제하며 조직 내 맡은 역할에 기초하여 자원에 대한 접근을 제한하는 방법
+
+[보기]
+
+​
+
+​Subject, Object, Access, Identification, Authentication, Authorization, DAC, MAC, RBAC
+
+정​​답)
+
+​① Subject
+
+​​​​​② Authentication
+
+​​​​​③ RBAC
+
+---
+
 34. 다음에서 설명하는 라우팅 프로토콜을 쓰시오.
 
 - AS 내에서 사용하는 거리 벡터(Distance-Vector) 알고리즘에 기초하여 개발된 내부 라우팅 프로토콜
