--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -1,3 +1,23 @@
+36. 다음은 보안 암호 알고리즘에 대한 설명이다. 괄호(      ) 안에 들어갈 암호화 알고리즘 종류를 쓰시오.
+
+* (      ①      ) : 국내 한국인터넷진흥원(KISA)이 개발한 블록 암호화 알고리즘으로 128bit 비밀키로부터 생성된 16개의 64bit 라운드 키를 사용하여 총 16회의 라운드를 거쳐 128bit 암호문 블록으로 암호화하는 대칭키 알고리즘
+
+
+
+* (      ②      ) : 유한체 위에서 정의된 타원곡선 군에서의 이산대수 문제에 기초한 암호화 알고리즘으로 RSA보다 키의 비트 수를 적게하면서 동일한 성능을 제공하는 하는 비대칭키 암호화 알고리즘
+
+
+
+정답)
+
+
+
+## ① SEED
+
+## ② ECC(Elliptic Curve Cryptography)
+
+---
+
 # 35. 다음은 접근 통제 관련 내용이다. 괄호(       ) 안에 들어갈 용어를 보기에서 골라서 쓰시오.
 
 - (        ①        ) : 객체나 객체 내의 데이터에 대한 접근을 요청하는 능동적인 개체(행위자)
@@ -8,17 +28,17 @@
 
 [보기]
 
-​
 
-​Subject, Object, Access, Identification, Authentication, Authorization, DAC, MAC, RBAC
 
-정​​답)
+Subject, Object, Access, Identification, Authentication, Authorization, DAC, MAC, RBAC
 
-​① Subject
+정답)
 
-​​​​​② Authentication
+① Subject
 
-​​​​​③ RBAC
+② Authentication
+
+③ RBAC
 
 ---
 
@@ -30,11 +50,11 @@
 
 - 각 라우터는 이웃 라우터들로부터 수신한 정보를 이용하여 라우팅 표를 갱신
 
-​
 
-​
 
-​정답) RIP(Routing Information Protocol)
+
+
+정답) RIP(Routing Information Protocol)
 
 ---
 
@@ -118,7 +138,7 @@
 
 - (        ②        )은/는 정책, 프로세스, 콘텐츠 구성, 와이어프레임(UI, UX), 기능 정의, 데이터베이스 연동 등 서비스 구축을 위한 모든 정보가 담겨 있는 설계 산출물이다.
 
-​정답)
+정답)
 
 ① 목업(Mockup)
 
@@ -128,7 +148,7 @@
 
 ![](img/2022-04-20-20-00-56.png)
 
-​① 집합 관계(Aggregation) 
+① 집합 관계(Aggregation) 
 
 ② 실체화 관계(Realization)
 
@@ -136,59 +156,59 @@
 
 * 포함 관계는 속이 찬 마름모로 표현
 
-​- 실체화 관계는 사물이 할 수 있거나 해야 하는 기능으로서 서로를 그룹화 할 수 있는 관계(Can do this)를 표현, 기능 쪽으로 빈 점선 화살표 연결
+- 실체화 관계는 사물이 할 수 있거나 해야 하는 기능으로서 서로를 그룹화 할 수 있는 관계(Can do this)를 표현, 기능 쪽으로 빈 점선 화살표 연결
 
-​---
+---
 
 - (           ①        )은/는 최종 사용자인 고객에게 개발 과정에서 정리된 상세 서비스 정보를 포함하여 제품의 수정, 변경, 개선하는 일련의 작업들에 대한 정보를 제공하는 문서이다.
-​
-- (           ①        ) 작성 항목 중 문서 이름, 제품 이름, 버전 번호, 날짜, 참고 날짜, 버전 등의 정보가 들어가 있는 작성 항목은 ( ​          ②         )이다.
 
-​정답)
+- (           ①        ) 작성 항목 중 문서 이름, 제품 이름, 버전 번호, 날짜, 참고 날짜, 버전 등의 정보가 들어가 있는 작성 항목은 (           ②         )이다.
+
+정답)
 
 ① 릴리즈 노트(Release Note)
 
 ② 헤더(Header)
-​---
+---
 - 프로세스 상태전이 중 (          ①         )은/는 준비 상태에 있는 여러 프로세스(Ready List) 중 실행될 프로세스를 선정(Scheduling)하여 CPU를 할당하는 동작을 말한다.
-​
+
 - (         ①         )가 수행되면 CPU가 현재 실행하고 있는 프로세스의 문맥 상태를 프로세스 제어블록(PCB)에 저장하고 다음 프로세스의 PCB로 부터 문맥을 복원하는 (         ②         )이/가 발생한다.
-​
-​정답)
+
+정답)
 
 ① 디스패치(Dispatch)
-​
+
 ② 문맥교환(Context switching).
 ---
 15. 다음은 애플리케이션 성능 측정 지표에 대한 설명이다. 괄호(        ) 안에 들어갈 용어을 보기에서 골라 쓰시오.
 
 • (            ①           ) : 애플리케이션에 사용자가 요구를 입력한 시점부터 트랜잭션을 처리 후 그 결과의 출력이 완료할 때까지 걸리는 시간
-​
+
 • (            ②           ) : 애플리케이션이 트랜잭션을 처리하는 동안 사용하는 CPU 사용량, 메모리 사용량, 네트워크 사용량을 총칭하는 용어
 
 | 보기 |
 Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performance Utility, Access Time
 답)
-​
+
 ①____________________________
-​
+
 ②____________________________
-​
-​
-​정답)
+
+
+정답)
 
 ① Turnaround Time
-​
+
 ② Resource Usage
 
-​---
+---
 
 - 스니핑(Sniffing)이란 해킹 기법으로서 네트워크 상에서 자신이 아닌 다른 상대방들의 패킷 교환을 훔쳐보는 것을 의미한다.
-​
+
 - 스니핑 기법 중 (       ①       )은/는 위조된 매체 접근 제어(MAC) 주소를 지속적으로 네트워크로 흘려보내, 스위치 MAC 주소 테이블의 저장 기능을 혼란시켜 더미 허브(Dummy Hub)처럼 작동하게 하여 네트워크 패킷을 스니핑하는 기법이다.
-​
+
 - (       ②       )은/는 공격자가 특정 호스트의 MAC 주소를 자신의 MAC 주소로 위조한 ARP Reply를 만들어 희생자에게 지속적으로 전송하여 희생자의 ARP Cache table에 특정 호스트의 MAC 정보를 공격자의 MAC 정보로 변경, 희생자로부터 특정 호스트로 나가는 패킷을 공격자가 스니핑하는 기법이다.
-​
+
 정답)
 
 ①. 스위치 재밍(Switch Jamming)
@@ -198,10 +218,10 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 ---
 
 - ( ① )은/는 파라미터가 아닌 모듈 밖에 선언되어 있는 전역 변수를 참조하고 전역 변수를 갱신하는 식으로 상호 작용하는 경우의 결합도이다.
-​
+
 - ( ② )은/는 모듈 내에서 한 활동으로부터 나온 출력값을 다른 활동이 사용할 경우의 응집도이다.
-​
-​정답)
+
+정답)
 
 ①. 공통 결합도(Common Coupling)
 ②. 순차적 응집도(Sequential Cohesion)
@@ -213,7 +233,7 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 * 대소문자를 구분하지 않음
 
 * ```정답) GRANT INSERT ON 직원 TO 고길동;```
-​
+
 ---
 
 ```printf("%.2f", (float)21/(3*2));```
@@ -225,19 +245,19 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 10. 안전한 인터페이스를 구현하기 위해서는 보안 기술 적용이 무엇보다도 중요하다. 다음은 인터페이스 보안 구현 방안이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
 
 - 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
-​
+
 - 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
 
 답)
 
- ​①____________________________
+ ①____________________________
 
-​
- ​②____________________________
 
-​
-​
-​정답)
+ ②____________________________
+
+
+
+정답)
 
 ① Plug-in (방식)
 
@@ -249,30 +269,30 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 
 
 * *OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
-​
+
 
 답)__________________________
-​
 
-​정답) 소켓(socket)
 
-​---
+정답) 소켓(socket)
+
+---
 
 30. 다음은 클래스 다이어그램(Class Diagram)에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
 
 - 클래스 다이어그램의 구성 요소 중 (          ①         ) 은/는 클래스의 구조적 특성에 이름을 붙인 것으로 특성에 해당하는 인스턴스가 보유할 수 있는 값의 범위를 기술한 것이다.
 
-​
 
-​​- 클래스 다이어그램의 접근 제어자 중 (​      ②      )은/는 동일 패키지/파생 클래스에서 접근 가능(protected)함을 표현할 때 사용한다.
+
+- 클래스 다이어그램의 접근 제어자 중 (      ②      )은/는 동일 패키지/파생 클래스에서 접근 가능(protected)함을 표현할 때 사용한다.
 
 정답) 
 
-​​① 속성(Attribute)
+① 속성(Attribute)
 
-​​② #
+② #
 
-​---
+---
 
 1. 다음에서 설명하는 시스템은 무엇인가?
 
@@ -280,18 +300,18 @@ Throughput, Response Time, Seek Time, Turnaround Time, Resource Usage, Performan
 
 - 침입자를 속여 실제 공격당하는 것처럼 보여줌으로써 크래커를 추적하고, 공격기법의 정보를 수집하는 역할을 하는 시스템
 
-​
+
 답)_____________________________________
 
-​
-​
-​
-​정답) ​허니팟(Honeypot) : 허니팟 또는 허니 포트는 비정상적인 접근을 탐지하기 위해 의도적으로 설치해 둔 시스템을 의미한다.
-​​
-​
+
+
+
+정답) 허니팟(Honeypot) : 허니팟 또는 허니 포트는 비정상적인 접근을 탐지하기 위해 의도적으로 설치해 둔 시스템을 의미한다.
+
+
 해설) 2022년 1회 필기 교차 출제 대비
 
-​---
+---
 
 2. 다음은 테스트에 대한 설명이다. 괄호(     ) 안에 들어갈 테스트의 유형을 보기에서 골라 쓰시오.
 
@@ -312,11 +332,11 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 • (                )은/는 멀티프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 기법이다.
 • 한 프로세스(또는 스레드)에서 (             )의 값을 변경하는 동안 다른 프로세스가 동시에 이 값을 변경해서는 안 된다.
 • (                )은/는 P, V 연산을 기반으로 구현한다.
-​
-정답) 세마포어 (Semaphore)
-​
 
-​해설) 
+정답) 세마포어 (Semaphore)
+
+
+해설) 
 
 * 2022년 1회 기사 필기 기출, 2022년 1회 산업기사 필기 기출
 
@@ -338,7 +358,7 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 
 ②_________________________
 
-​
+
 
 정답)
 
@@ -348,12 +368,12 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 
 
 
-​---
+---
 
 5. 상향식 비용 산정 기법 중 소프트웨어 각 기능의 원시 코드 라인 수의 낙관치, 중간치, 비관치를 측정하여 예측치를 구하고 이를 이용하여 비용을 산정하는 기법을 무엇이라고 하는지 쓰시오.
-​
-​
-​
+
+
+
 정답) LOC(Lines of Code) 기법
 
 ---
@@ -365,15 +385,15 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 • (              ) 관계는 하나의 사물이 다른 사물에 포함되어 있는 관계를 표현한다.
 
 • (              ) 관계는 포함되는 쪽(Part; 부분)에서 포함하는 쪽(Whole; 전체)으로 속이 빈 마름모를 연결하여 표현한다.
-​
-​정답) 집합(Aggregation)
+
+정답) 집합(Aggregation)
 
 ---
 
 6. 최근 클라우드 기반의 대용량 데이터를 다루는 기술이 다양하게 활용되고 있다. 아래는 클라우드와 빅데이터 관련 기술에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
 
 • (       ①      )은/는 컨테이너 응용 프로그램의 배포를 자동화하는 오픈소스 엔진으로 소프트웨어 컨테이너 안에 응용 프로그램들을 배치시키는 일을 자동화해 주는 오픈 소스 프로젝트이자 소프트웨어이다.
-​
+
 • (       ②      )은/는 웹 사이트를 크롤링하여 구조화된 데이터를 수집하는 파이썬(Python) 기반의 애플리케이션 프레임워크이다. 
 정답)
 
@@ -386,9 +406,9 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 8. 다음은 반 정규화 기법에 대한 설명이다. 괄호(        ) 안에 들어갈 용어를 쓰시오.
 
 • 테이블 분할 기법 중 집계 테이블 추가는 집계 데이터를 위한 테이블을 생성하고, 각 원본 테이블에 트리거를 설정하여 사용하는 것으로, 트리거의 오버헤드에 유의할 필요가 있다.
-​
+
 • 테이블 분할 기법 중 (                ) 추가는 이력 관리 등의 목적으로 추가하는 테이블로, 적절한 데이터양의 유지와 활용도를 높이기 위해 기본키를 적절히 설정한다.
-​
+
 정답) 진행 테이블
 
 ---
@@ -398,32 +418,32 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 - (             )은/는 컴퓨터 네트워크를 경유하는 프로세스 간 통신의 종착점이다. 
 
 - OSI 7 계층의 애플리케이션 계층(application layer)에 존재하는 네트워크 응용 프로그램들은 데이터를 송수신하기 위해 (             )을/를 거쳐 전송 계층(trasport layer)의 통신망으로 전달함으로써 데이터를 송수신하게 된다.
-​
+
 답)__________________________
-​
-​
-​
-​정답) 소켓(socket)
-​
+
+
+
+정답) 소켓(socket)
+
 ---
 
 10. 안전한 인터페이스를 구현하기 위해서는 보안 기술 적용이 무엇보다도 중요하다. 다음은 인터페이스 보안 구현 방안이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
 
 - 중요 데이터가 보관된 데이터베이스는 암호화를 필수적으로 적용해야 한다. 데이터베이스 암호화 방식 중 (       ①       )은/는 암·복호화 모듈이 DB 서버에 설치된 방식으로 DB 서버에 암·복호화, 정책 관리, 키 관리 등의 부하가 발생한다.
-​
+
 - 또한 전송계층(4계층)과 응용계층(7계층) 사이에서 클라이언트와 서버 간의 웹 데이터 암호화(기밀성), 상호 인증 및 전송 시 데이터 무결성을 보장, 443포트를 사용하는 보안 프로토콜인 (       ②       )을/를 사용해서 중요 인터페이스 데이터의 안전한 전송을 수행해야 한다.
 
 답)
 
-​①____________________________
-​
-​②____________________________
-​
-​
-​정답)
+①____________________________
+
+②____________________________
+
+
+정답)
 ① Plug-in (방식)
 ② SSL/TLS (= SSL = TLS)
-​---
+---
 32. 다음에서 설명하는 IT 기술을 쓰시오.
 
 - 기존의 라우터, 스위치 등과 같이 하드웨어에 의존하는 네트워크 체계에서 안정성, 속도, 보안 등을 소포트웨어로 제어, 관리하기 위해 개발된 기술
@@ -432,25 +452,25 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 
 - 네트워크 장비의 펌웨어 업그레이드를 통해 사용자의 직접적인 데이터 전송 경로 관리가 가능하고, 기존 네트워크에는 영향을 주지 않으면서 특정 서비스의 전송 경로 수정을 통하여 인터넷상에서 발생하는 문제를 처리할 수 있음
 
-​
 
-​정답) SDN(Software Defined Networking)
+
+정답) SDN(Software Defined Networking)
 ---
 31. 다음은 논리적 데이터 모델링 유형에 대한 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
 
 - (         ①        )모델은 논리적 구조가 2차원 테이블 형태로 구성된 모델로 1:1, 1:N, N:M을 자유롭게 표현할 수 있다.
 
-​
 
-​​- (​         ②        )모델은 논리적 구조가 트리 형태로 구성된 모델로 상하관계 존재하고, 1:N 관계만 허용한다.
+
+- (         ②        )모델은 논리적 구조가 트리 형태로 구성된 모델로 상하관계 존재하고, 1:N 관계만 허용한다.
 
 정답) 
 
-​​① 관계 데이터
+① 관계 데이터
 
-​
 
-​​② 계층 데이터
+
+② 계층 데이터
 ---
 33. 다음은 정보보안과 관련된 내용이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
 
@@ -460,11 +480,11 @@ Recovery Testing, Security Testing, Generalization, Structure Testing, Regressio
 
 - 대표적인 유틸리티인 (        ②      )은/는 어떤 외부 컴퓨터가 접속되면 접속 인가 여부를 점검해서 인가된 경우에는 접속이 허용되고, 그 반대의 경우에는 거부할 수 있는 접근제어 유틸리티이다.
 
-​​정답) 
+정답) 
 
 ① 기밀성(Confidentiality)
 
-​​​​② TCP 레퍼(TCP Wrapper)
+② TCP 레퍼(TCP Wrapper)
 
-​---
+---
 
