--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -1,3 +1,58 @@
+## 39. 다음은 애자일(Agile) 기법 중 스크럼(Scrum)과 관련된 용어 설명이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
+
+- (          ①          )은/는 스크럼 프로세스를 따르고, 프로젝트 리더로 팀이 스크럼을 효과적으로 활용할 수 있도록 보장하는 역할 등을 맡는다.
+
+- (          ②          )은/는 2~4주의 짧은 개발 기간으로 반복적 수행을 통해 개발품질을 향상시킬 수 있다.
+
+- (          ③          )은/는 남아있는 백로그 대비 시간을 그래픽적으로 표현한 차트이다.
+
+정​​답)
+
+① 스크럼 마스터(Scrum Master)
+
+​② 스프린트(Sprint)
+
+③ 번 다운 차트(Burn Down Chart)
+
+---
+
+## 38. 다음은 프로젝트 일정 관리에 대한 설명이다. 괄호(       ) 안에 들어갈 용어를 쓰시오.
+
+- 시간선(Time-line) 차트라고 하고, 작업이 언제 시작하고 언제 종료되는지에 대한 일정을 막대 도표를 이용하여 표시한 일정표는 (         ①        ) 차트이다.
+
+​
+
+- 프로젝트에 필요한 전체 작업의 상호관계를 표시하는 네트워크로 작업들 간의 상호 관련성, 결정경로, 경계시간, 자원할당 등을 알 수 있는 것은 (          ②        ) 차트이다.
+
+정​​답)
+
+​​① 간트(GANTT)
+
+​​​​​② 퍼트(PERT)
+
+​
+---
+
+## 37. 데이터 모델의 구성요소 중 데이터 구조에 따라 개념 세계나 컴퓨터 세계에서 실제로 표현된 값들을 처리하는 작업을 의미하는 것은 무엇인가?
+
+​​
+
+​
+
+​
+
+답) ____________________________
+
+​
+
+​​​​​
+
+​
+
+정​​답) ​연산(Operation)
+
+---
+
 36. 다음은 보안 암호 알고리즘에 대한 설명이다. 괄호(      ) 안에 들어갈 암호화 알고리즘 종류를 쓰시오.
 
 * (      ①      ) : 국내 한국인터넷진흥원(KISA)이 개발한 블록 암호화 알고리즘으로 128bit 비밀키로부터 생성된 16개의 64bit 라운드 키를 사용하여 총 16회의 라운드를 거쳐 128bit 암호문 블록으로 암호화하는 대칭키 알고리즘
