--- a/2022년1회예상기출.md
+++ b/2022년1회예상기출.md
@@ -1,41 +1,37 @@
+# 정처리 1회 예상
 
-42. 다음은 신기술 용어이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
+## 42. 다음은 신기술 용어이다. 괄호(      ) 안에 들어갈 용어를 쓰시오.
 
-- (       ①       )은/는 블록체인 기술을 이용해서 디지털 자산의 소유주를 증명하는 가상의 토큰(token)이다.
+* (       ①       )은/는 블록체인 기술을 이용해서 디지털 자산의 소유주를 증명하는 가상의 토큰(token)이다.
 
-​
-
-- (       ②       )은/는 초월을 의미하는 단어와 세계, 우주를 의미하는 단어를 합성한 신조어로 현실을 디지털 기반의 가상 세계로 확장해 가상 공간에서 모든 활동을 할 수 있게 만드는 시스템이다.
+* (       ②       )은/는 초월을 의미하는 단어와 세계,  우주를 의미하는 단어를 합성한 신조어로 현실을 디지털 기반의 가상 세계로 확장해 가상 공간에서 모든 활동을 할 수 있게 만드는 시스템이다.
 
 ​​정답)
 
 ① 대체 불가능 토큰(Non-fungible token; NFT)
 
-​
-
 ​② 메타버스(metaverse)
 
 ---
 
-41. UI 유형 중 현실에 존재하는 모든 사물이 입출력장치로 변화할 수 있는 사용자 인터페이스를 무엇이라고 하는가?
-
-​
-
-​​
-
-​
+## 41. UI 유형 중 현실에 존재하는 모든 사물이 입출력장치로 변화할 수 있는 사용자 인터페이스를 무엇이라고 하는가?
 
 정답) OUI(Organic User Interface)
 
+```CG NO```
+
+* CLI 명령어를 텍스트로 입력하여 조작
+* GUI 그랙픽 환경 기반
+* NUI 신체부위
+* OUI 모든 사물이 입출력 장치
+
 --- 
 
-40. 다음은 소프트웨어 공학의 소프트웨어 설계에서 공통으로 발생하는 문제에 대해 자주 쓰이는 설계 방법을 정리한 디자인 패턴에 대한 설명이다. 괄호(       ) 안에 들어갈 패턴의 이름을 쓰시오.
+## 40. 다음은 소프트웨어 공학의 소프트웨어 설계에서 공통으로 발생하는 문제에 대해 자주 쓰이는 설계 방법을 정리한 디자인 패턴에 대한 설명이다. 괄호(       ) 안에 들어갈 패턴의 이름을 쓰시오.  
 
-- (       ①       )은/는 복잡한 시스템에 대하여 단순한 인터페이스를 제공함으로써 사용자와 시스템 간 또는 여타 시스템과의 결합도를 낮추어 시스템 구조에 대한 파악을 쉽게 하는 패턴으로 오류에 대해서 단위별로 확인할 수 있게 하며, 사용자의 측면에서 단순한 인터페이스 제공을 통해 접근성을 높일 수 있는 디자인 패턴이다.
+* (       ①       )은/는 복잡한 시스템에 대하여 단순한 인터페이스를 제공함으로써 사용자와 시스템 간 또는 여타 시스템과의 결합도를 낮추어 시스템 구조에 대한 파악을 쉽게 하는 패턴으로 오류에 대해서 단위별로 확인할 수 있게 하며, 사용자의 측면에서 단순한 인터페이스 제공을 통해 접근성을 높일 수 있는 디자인 패턴이다.
 
-​
-
-- (       ②       )은/는 스스로 캡슐화한 다음, 필요할 때 서로 교환해서 사용할 수 있게 하는 패턴으로, 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 디자인 패턴이다.
+* (       ②       )은/는 스스로 캡슐화한 다음,   필요할 때 서로 교환해서 사용할 수 있게 하는 패턴으로, 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 디자인 패턴이다.
 
 ​
 
@@ -92,10 +88,6 @@
 ​
 
 답) ____________________________
-
-​
-
-​​​​​
 
 ​
 
