--- a/2022년2회예상기출.md
+++ b/2022년2회예상기출.md
@@ -415,13 +415,6 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 ③ 티어 드롭(Tear Drop)
 
 
-
-
-
-
-
-
-
 ---
 
 ## (11과목) 응용 SW 기초 기술 활용 - 16
@@ -494,10 +487,7 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 
 - (           ①        )은/는 콘텐츠를 메타데이터와 함께 배포 가능한 단위로 묶는 도구이다.
 
-
- - (            ②        )은/는 저작권에 대한 사용 권한, 라이센스 발급, 사용량에 따른 관리 등을 수행하는 도구이다.
-
-
+- (            ②        )은/는 저작권에 대한 사용 권한, 라이센스 발급, 사용량에 따른 관리 등을 수행하는 도구이다.
 - (            ③        )은/는 배포된 디지털 콘텐츠의 이용 권한을 통제하는 장치이다.
 
 
@@ -509,7 +499,6 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 
 ③ DRM 컨트롤러(DRM Controller)
 
-
 ---
 
 ## (9과목) 소프트웨어 개발 보안 구축 - 19. 다음은  보안 관련 용어 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오
@@ -520,19 +509,19 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 
 ### 정답)
 
-* ① 시큐어 코딩(Secure Coding)
-* ② CVE(Common Vulnerabilities and Exposures)
-* ③ OWASP(The Open Web Application Security Project)
+- ① 시큐어 코딩(Secure Coding)
+- ② CVE(Common Vulnerabilities and Exposures)
+- ③ OWASP(The Open Web Application Security Project)
 
 ---
 
 ## [2022년 제2회 기사 실기 출제예상 문제] (3과목) 데이터 입출력 구현 - 20.  관계형 데이터베이스 역정규화(denormalization)에 대한 설명으로 옳지 않은 것을 모두 고르시오. (기호로 쓰시오)
 
-* ㄱ. 릴레이션들은 역정규화한 후 정규형 수준이 높아진다.
-* ㄴ. 역정규화 기법에는 테이블 병합, 테이블 분할, 중복 테이블 추가, 컬럼 중복화, 중복관계 추가 등이 있다. 
-* ㄷ. 데이터베이스의 데이터 무결성을 강화할 목적으로 개발되었다.
-* ㄹ. 릴레이션들의 데이터 중복을 줄임으로써 데이터베이스의 크기를 감소시킨다.
-* ㅁ. 둘 이상의 릴레이션들에 대하여 조인한 결과를 빈번하게 이용하는 경우, 역정규화 함으로써 질의응답 시간이 단축될 수 있다.
+- ㄱ. 릴레이션들은 역정규화한 후 정규형 수준이 높아진다.
+- ㄴ. 역정규화 기법에는 테이블 병합, 테이블 분할, 중복 테이블 추가, 컬럼 중복화, 중복관계 추가 등이 있다. 
+- ㄷ. 데이터베이스의 데이터 무결성을 강화할 목적으로 개발되었다.
+- ㄹ. 릴레이션들의 데이터 중복을 줄임으로써 데이터베이스의 크기를 감소시킨다.
+- ㅁ. 둘 이상의 릴레이션들에 대하여 조인한 결과를 빈번하게 이용하는 경우, 역정규화 함으로써 질의응답 시간이 단축될 수 있다.
 
 정답) ㄱ, ㄷ, ㄹ
 
@@ -540,9 +529,14 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 
 ## [2022년 제2회 기사 실기 출제예상 문제] (10과목) 애플리케이션 테스트 관리 - 21. 다음은 테스트 관련 설명이다. 괄호(      ) 안에 들어갈 용어를 쓰시오
 
-* 하나의 모듈을 테스트할 때 상위나 하위 모듈이 개발이 안 된 경우가 있다. 이때 상위나 하위 모듈이 개발될 때까지 기다릴 수 없어 가상의 상위나 하위 모듈을 만들어 사용한다. 상위 모듈 역할을 하는 가상의 모듈을 (        ①        )(이)라고 하고 그 역할은 테스트할 모듈을 호출하고, 모듈 테스트 수행 후의 결과를 도출하는 역할을 한다. 반대로 하위 역할을 하는 모듈을 (        ②        )(이)라고 하고 인자를 통해 받은 값을 가지고 테스트를 수행한 후 그 반환 값만 테스트할 모듈에 넘겨주는 역할을 한다.
-* 정답)
-
-** ① 드라이버(Driver) 또는 테스트 드라이버(Test Driver)
-
-** ② 스텁(Stub) 또는 테스트 스텁(Test Stub)
+- 하나의 모듈을 테스트할 때 상위나 하위 모듈이 개발이 안 된 경우가 있다.  
+이때 상위나 하위 모듈이 개발될 때까지 기다릴 수 없어 가상의 상위나 하위 모듈을 만들어 사용한다.  
+상위 모듈 역할을 하는 가상의 모듈을 (        ①        )(이)라고 하고 그 역할은 테스트할 모듈을 호출하고,  
+모듈 테스트 수행 후의 결과를 도출하는 역할을 한다.   
+반대로 하위 역할을 하는 모듈을 (        ②        )(이)라고 하고  
+인자를 통해 받은 값을 가지고 테스트를 수행한 후 그 반환 값만 테스트할 모듈에 넘겨주는 역할을 한다.
+- 정답)
+  - ① 드라이버(Driver) 또는 테스트 드라이버(Test Driver)
+  - ② 스텁(Stub) 또는 테스트 스텁(Test Stub)
+  - 상드라 하스텁
+  
