--- a/2022년2회예상기출.md
+++ b/2022년2회예상기출.md
@@ -518,9 +518,10 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 ## [2022년 제2회 기사 실기 출제예상 문제] (3과목) 데이터 입출력 구현 - 20.  관계형 데이터베이스 역정규화(denormalization)에 대한 설명으로 옳지 않은 것을 모두 고르시오. (기호로 쓰시오)
 
 - ㄱ. 릴레이션들은 역정규화한 후 정규형 수준이 높아진다.
-- ㄴ. 역정규화 기법에는 테이블 병합, 테이블 분할, 중복 테이블 추가, 컬럼 중복화, 중복관계 추가 등이 있다. 
 - ㄷ. 데이터베이스의 데이터 무결성을 강화할 목적으로 개발되었다.
 - ㄹ. 릴레이션들의 데이터 중복을 줄임으로써 데이터베이스의 크기를 감소시킨다.
+
+- ㄴ. 역정규화 기법에는 테이블 병합, 테이블 분할, 중복 테이블 추가, 컬럼 중복화, 중복관계 추가 등이 있다. 
 - ㅁ. 둘 이상의 릴레이션들에 대하여 조인한 결과를 빈번하게 이용하는 경우, 역정규화 함으로써 질의응답 시간이 단축될 수 있다.
 
 정답) ㄱ, ㄷ, ㄹ
@@ -538,5 +539,39 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 - 정답)
   - ① 드라이버(Driver) 또는 테스트 드라이버(Test Driver)
   - ② 스텁(Stub) 또는 테스트 스텁(Test Stub)
-  - 상드라 하스텁
-  
+  - 개발이 안된경우 테스트 모듈 상드라 하스텁 상 드라이버, 하 스텁
+
+## [2022년 제2회 기사 실기 출제예상 문제] (1과목) 요구사항 확인 - 22. 다음은 비용산정 모형에 대한 설명이다. 괄호( ) 안에 들어갈 모형을 쓰시오.
+
+- ( ① )은/는 보헴(Boehm)이 제안한 모형으로 프로그램 규모에 따라 비용을 산정하는 방식으로 비용산정 결과는 프로젝트를 완성하는 데 필요한 노력(Man-Month)으로 산정한다.
+- ( ② )은/는 소프트웨어 개발주기의 단계별로 요구할 인력의 분포를 가정하는 방식으로 시간에 따른 함수로 표현되는 Rayleigh-Norden 곡선의 노력 분포도를 기초로 한다.
+
+정답)
+
+① COCOMO(COnstructive COst MOdel) 모형 : 보햄 코코모, 규묘=비용
+
+② 푸트남(Putnam) 모형 : 인력의 분포, 시간에 따른 함수
+
+## [2022년 제2회 기사 실기 출제예상 문제] (2과목) 화면 설계 - 23 다음은 클래스 다이어그램의 구성요소에 대한 설명이다. 괄호(       ) 안에 들어갈 구성요소를 쓰시오
+
+- (          ①          )은/는 클래스의 구조적 특성에 이름을 붙인 것으로 특성에 해당하는 인스턴스가 보유할 수 있는 값의 범위를 기술한다.
+- 클래스에 접근할 수 있는 정도를 표현한 (          ②          )의 유형에는 -, +, #, ~ 가 있다.
+
+정답)
+
+① 속성(Attribute) : 값의 범위 속성
+
+② 접근 제어자(Access Modifier) : 접근 제어자  -+#~
+
+## [2022년 제2회 기사 실기 출제예상 문제] (9과목) 소프트웨어 개발 보안 구축 - 24 다음은 시스템 보안 공격기법에 대한 설명이다. 괄호(       ) 안에 들어갈 용어를 쓰시오
+
+- (        ①        )은/는 컴퓨터 사용자의 키보드 움직임을 탐지해서 저장하고, ID나 패스워드, 계좌 번호, 카드 번호 등과 같은 개인의 중요한 정보를 몰래 빼가는 해킹 공격이다.
+- (        ②        )은/는 시스템 침입 후 침입 사실을 숨긴 채 차후의 침입을 위한 백도어, 트로이 목마 설치, 원격 접근, 내부 사용 흔적 삭제, 관리자 권한 획득 등 주로 불법적인 해킹에 사용되는 기능을 제공하는 프로그램의 모음이다.
+
+정답)
+
+① 키로거 공격(Key Logger Attack) : 키보드 움직임, 키로거
+
+② 루트킷(Rootkit) : 모음집 루트킷
+
+키로커, 보햄, 루트킷, 속성, 접근 제어자, 푸트남 인력 분포
