--- a/2022년2회예상기출.md
+++ b/2022년2회예상기출.md
@@ -575,3 +575,33 @@ Branch Coverage, Multiple Condition Coverage, Condition Coverage, Modified Condi
 ② 루트킷(Rootkit) : 모음집 루트킷
 
 키로커, 보햄, 루트킷, 속성, 접근 제어자, 푸트남 인력 분포
+
+## [2022년 제2회 기사 실기 출제예상 문제] (2과목) 화면 설계 - 25. 다음은 클래스 간의 관계(Relationships)에 대한 설명이다. 괄호(    ) 안에 들어갈 용어를 쓰시오
+
+- (        ①        )은/는 집합 관계의 특수한 형태로, 포함하는 사물의 변화가 포함되는 사물에게 영향을 미치는 관계를 표현한다.
+- (        ②        )은/는 하나의 클래스에 있는 멤버 함수의 인자가 변함에 따라  다른 클래스에 영향을 미칠 때의 관계로 사물 사이에 서로 연관은 있으나 필요에 따라 서로에게 영향을 주는 짧은 시간 동안만 연관을 유지하는 관계를 표현한다.
+
+ 정답)
+
+① 포함(Composition) 관계(=복합 관계) 클래스간 포함 관계 (composition컴포시션)
+
+② 의존(Dependency) 관계 : 짧은시간 연관 유지, 멤버 함수 인자 변화에 따라  의존
+
+## [2022년 제2회 기사 실기 출제예상 문제] (1과목) 요구사항 확인 - 26. 다음은 소프트웨어 아키텍처 패턴에 대한 설명이다. 괄호(    ) 안에 들어갈 아키텍처 패턴의 유형을 쓰시오
+
+- 분산 시스템을 위한 (                     ) 아키텍처 패턴은  
+연산, 통신, 조정을 책임지는 부분과  
+제어되고 동기화되는 대상으로 구성되는 패턴으로  
+컴포넌트들에서 처리된 결과물을 돌려받아 최종 결과값을 산출하는 방식으로 작업을 수행하는 패턴이다.
+
+- 정답) 마스터-슬레이브(Master-Slave) 연산,통신,조정 책임 / 제어되고 동기화되는 대상
+최종 결과값 = 컴포넌트에서 처리된 결과물 => 산출
+마스터 슬레이브
+master-slave
+
+### 해설) 2022 수제비 정보처리기사 실기책 1-21페이지 참조
+
+- 마스터-슬래이브(Master-Slave) 아키텍처 패턴
+- 마스터와 슬레이브, 두 부분으로 구성된다.
+- 마스터 컴포넌트는 동등한 구조를 지닌 슬레이브 컴포넌트들로 작업을 분산하고, 슬레이브가 반환한 결과값으로부터 최종 결과값을 계산한다.
+- 연산, 통신, 조정을 책임지는 마스터 부분과 제어되고 동기화되는 대상인 슬레이브 부분으로 구성된 패턴이다.
