--- a/2022년2회예상기출.md
+++ b/2022년2회예상기출.md
@@ -605,3 +605,15 @@ master-slave
 - 마스터와 슬레이브, 두 부분으로 구성된다.
 - 마스터 컴포넌트는 동등한 구조를 지닌 슬레이브 컴포넌트들로 작업을 분산하고, 슬레이브가 반환한 결과값으로부터 최종 결과값을 계산한다.
 - 연산, 통신, 조정을 책임지는 마스터 부분과 제어되고 동기화되는 대상인 슬레이브 부분으로 구성된 패턴이다.
+
+## [2022년 제2회 기사 실기 출제예상 문제] (7과목) SQL 응용 - 27 다음은 관계형 데이터베이스의 세 가지 기능적 요소에 대한 설명이다. ①～③에 들어갈 용어를 쓰시오
+
+- (        ①       )는(은) SQL에서 삽입, 삭제, 갱신과 같은 데이터 변경문을 실행할 때 미리 명시된 조건을 만족하는 경우 특정한 동작을 자동으로 수행할 수 있도록 한다
+- (        ②       )는(은) 일련의 쿼리들을 마치 하나의 함수처럼 실행하기 위한 쿼리의 집합이다.
+- (        ③       )는(은) 데이터베이스에서 데이터를 신속하게 탐색할 수 있도록 만든 데이터 구조이다.
+
+### 정답
+
+- ① 트리거(trigger) : 특정한 동작 자동 수행 / 삽입,삭제,갱신 데이터 변경문 실행 시
+- ② 프로시저(Procedure) : 하나의 함수, 쿼리의 집합
+- ​③ 인덱스(Index) : DB에서 신속하게 탐색 할수있는 데이터 구조
